--- a/pom.xml
+++ b/pom.xml
@@ -49,6 +49,7 @@
     <spring-tesb-version-range>[5.2,6)</spring-tesb-version-range>
     <qpid-jms-netty.tesb.version>4.1.77.Final</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>4.1.77.Final</netty-all.tesb.version>
+    <jettison.tesb.version>1.5.0</jettison.tesb.version>
 
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
@@ -1164,6 +1165,7 @@
               <spring-tesb-version-range>${spring-tesb-version-range}</spring-tesb-version-range>
               <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
               <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
+              <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
             </properties>
           </configuration>
           <executions>
