--- a/pom.xml
+++ b/pom.xml
@@ -41,10 +41,11 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.16.4.20220915</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.16.4.20221020</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.16.4.20220422</activemq-web-console.tesb.version>
-    <jackson.tesb.version>2.13.2</jackson.tesb.version>
-    <jackson-databind.tesb.version>2.13.2.2</jackson-databind.tesb.version>
+    <jackson.tesb.version>2.13.4</jackson.tesb.version>
+    <jackson-databind.tesb.version>2.13.4.2</jackson-databind.tesb.version>
+    <jettison.tesb.version>1.5.1</jettison.tesb.version>
     <netty.tesb.version>4.1.77.Final</netty.tesb.version>
     <qpid-jms-netty.tesb.version>${netty.tesb.version}</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>${netty.tesb.version}</netty-all.tesb.version>
@@ -1131,6 +1132,7 @@
               <activemq-web-console.tesb.version>${activemq-web-console.tesb.version}</activemq-web-console.tesb.version>
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
+              <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
               <netty.tesb.version>${netty.tesb.version}</netty.tesb.version>
               <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
               <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
