--- a/pom.xml
+++ b/pom.xml
@@ -38,10 +38,10 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.15.15.tesb5</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.15.15.tesb6</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.15.tesb1</activemq-web-console.tesb.version>
-    <jackson.tesb.version>2.13.2</jackson.tesb.version>
-    <jackson.databind.tesb.version>2.13.2.2</jackson.databind.tesb.version>
+    <jackson.tesb.version>2.13.4</jackson.tesb.version>
+    <jackson-databind.tesb.version>2.13.4.2</jackson-databind.tesb.version>
     <xstream-bundle.tesb.version>1.4.19_1</xstream-bundle.tesb.version>
     <xstream.tesb.version>1.4.19</xstream.tesb.version>
     <slf4j.tesb.version>1.7.36</slf4j.tesb.version>
@@ -49,7 +49,7 @@
     <spring-tesb-version-range>[5.2,6)</spring-tesb-version-range>
     <qpid-jms-netty.tesb.version>4.1.77.Final</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>4.1.77.Final</netty-all.tesb.version>
-    <jettison.tesb.version>1.5.0</jettison.tesb.version>
+    <jettison.tesb.version>1.5.1</jettison.tesb.version>
 
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
@@ -681,7 +681,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.databind.tesb.version}</version>
+        <version>${jackson-databind.tesb.version}</version>
       </dependency>
 
       <!-- Used to configure the activemq logs -->
@@ -1157,7 +1157,7 @@
               <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
               <activemq-web-console.tesb.version>${activemq-web-console.tesb.version}</activemq-web-console.tesb.version>
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
-              <jackson.databind.tesb.version>${jackson.databind.tesb.version}</jackson.databind.tesb.version>
+              <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
               <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
               <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
               <slf4j.tesb.version>${slf4j.tesb.version}</slf4j.tesb.version>
