--- a/activemq-karaf-itest/pom.xml
+++ b/activemq-karaf-itest/pom.xml
@@ -174,7 +174,7 @@
           <excludes>
           </excludes>
           <systemPropertyVariables>
-            <activemqVersion>${project.version}</activemqVersion>
+            <activemqVersion>${upstream.version}</activemqVersion>
             <karafVersion>${karaf-version}</karafVersion>
           </systemPropertyVariables>
         </configuration>
@@ -256,7 +256,7 @@
               -->
               <argLine>-Dorg.ops4j.pax.url.mvn.localRepository=${maven.repo.local}</argLine>
               <systemPropertyVariables>
-                <activemqVersion>${project.version}</activemqVersion>
+                <activemqVersion>${upstream.version}</activemqVersion>
                 <karafVersion>${karaf-version}</karafVersion>
                 <felixFrameworkVersion>${felix-framework-version}</felixFrameworkVersion>
               </systemPropertyVariables>
