--- a/activemq-jms-pool/pom.xml
+++ b/activemq-jms-pool/pom.xml
@@ -109,7 +109,7 @@
         <inherited>true</inherited>
         <configuration>
           <instructions>
-            <Export-Package>org.apache.activemq.jms.pool*;version=${project.version};-noimport:=true</Export-Package>
+            <Export-Package>org.apache.activemq.jms.pool*;version=${upstream.version};-noimport:=true</Export-Package>
             <Import-Package>
               javax.jms*;version="[1.1,3)",
               javax.transaction*;resolution:=optional,
