--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,14 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
+    <jackson.tesb.version>2.14.1</jackson.tesb.version>
+    <jettison.tesb.version>1.5.3</jettison.tesb.version>
+    <netty.tesb.version>4.1.85.Final</netty.tesb.version>
+    <qpid-jms-netty.tesb.version>${netty.tesb.version}</qpid-jms-netty.tesb.version>
+    <netty-all.tesb.version>${netty.tesb.version}</netty-all.tesb.version>
+    <spring.tesb.version-range>[5.2,6)</spring.tesb.version-range>
+
+    
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
     <activesoap-version>1.3</activesoap-version>
@@ -189,7 +197,7 @@
       <!-- this needs to match a server in your settings.xml with upload settings -->
       <id>activemq-website</id>
       <!-- set the staging.siteURL in your ~/.m2/settings.xml in a release or other profile -->
-      <url>${staging.siteURL}/maven/${project.version}</url>
+      <url>${staging.siteURL}/maven/${upstream.version}</url>
       <!--<url>${site-repo-url}</url>-->
     </site>
     <snapshotRepository>
@@ -706,17 +714,17 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-core</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-annotations</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson-version}</version>
+        <version>${jackson.tesb.version}</version>
       </dependency>
 
       <!-- Used to configure the activemq logs -->
@@ -1105,7 +1113,14 @@
               <!-- something like :
               <my.custom.property>${my.custom.property}</my.custom.property>
               -->
-             
+              <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
+              <jackson-databind.tesb.version>${jackson.tesb.version}</jackson-databind.tesb.version>
+              <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <netty.tesb.version>${netty.tesb.version}</netty.tesb.version>
+              <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
+              <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
+
+              <spring.tesb.version-range>${spring.tesb.version-range}</spring.tesb.version-range>
             </properties>
           </configuration>
           <executions>
