--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
+    <activemq-karaf.features.tesb.version>5.17.3.20230131</activemq-karaf.features.tesb.version>
     <jackson.tesb.version>2.14.1</jackson.tesb.version>
     <jettison.tesb.version>1.5.3</jettison.tesb.version>
     <netty.tesb.version>4.1.85.Final</netty.tesb.version>
@@ -1113,6 +1114,7 @@
               <!-- something like :
               <my.custom.property>${my.custom.property}</my.custom.property>
               -->
+              <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson.tesb.version}</jackson-databind.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
