--- a/pom.xml
+++ b/pom.xml
@@ -41,11 +41,13 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.16.4.20230320</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.16.4.20230330</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.16.4.20220422</activemq-web-console.tesb.version>
     <jackson.tesb.version>2.14.1</jackson.tesb.version>
     <jackson-databind.tesb.version>2.14.1</jackson-databind.tesb.version>
     <jettison.tesb.version>1.5.4</jettison.tesb.version>
+    <xstream.tesb.version>1.4.20</xstream.tesb.version>
+    <xstream-bundle.tesb.version>1.4.20_1</xstream-bundle.tesb.version>
     <netty.tesb.version>4.1.86.Final</netty.tesb.version>
     <qpid-jms-netty.tesb.version>${netty.tesb.version}</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>${netty.tesb.version}</netty-all.tesb.version>
@@ -1133,6 +1135,8 @@
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
+              <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
               <netty.tesb.version>${netty.tesb.version}</netty.tesb.version>
               <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
               <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
