--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     <jackson.tesb.version>2.14.1</jackson.tesb.version>
     <jackson-databind.tesb.version>2.14.1</jackson-databind.tesb.version>
     <jettison.tesb.version>1.5.4</jettison.tesb.version>
+    <commons-net.tesb.version>3.9.0</commons-net.tesb.version>
     <xstream.tesb.version>1.4.20</xstream.tesb.version>
     <xstream-bundle.tesb.version>1.4.20_1</xstream-bundle.tesb.version>
     <netty.tesb.version>4.1.86.Final</netty.tesb.version>
@@ -1135,6 +1136,7 @@
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <commons-net.tesb.version>${commons-net.tesb.version}</commons-net.tesb.version>
               <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
               <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
               <netty.tesb.version>${netty.tesb.version}</netty.tesb.version>
