--- a/pom.xml
+++ b/pom.xml
@@ -42,13 +42,18 @@
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
     <activemq-karaf.features.tesb.version>5.17.3.20230131</activemq-karaf.features.tesb.version>
+    <activemq-web-console.tesb.version>5.17.3.20230131</activemq-web-console.tesb.version>
     <jackson.tesb.version>2.14.1</jackson.tesb.version>
+    <jackson-databind.tesb.version>${jackson.tesb.version}</jackson-databind.tesb.version>
     <jettison.tesb.version>1.5.4</jettison.tesb.version>
+    <!-- <commons-net.tesb.version>3.9.0</commons-net.tesb.version> -->
+    <xstream.tesb.version>1.4.20</xstream.tesb.version>
+    <xstream-bundle.tesb.version>1.4.20_1</xstream-bundle.tesb.version>
     <netty.tesb.version>4.1.85.Final</netty.tesb.version>
     <qpid-jms-netty.tesb.version>${netty.tesb.version}</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>${netty.tesb.version}</netty-all.tesb.version>
+    <spring.tesb.version>5.3.26</spring.tesb.version>
     <spring.tesb.version-range>[5.2,6)</spring.tesb.version-range>
-
 
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
@@ -725,7 +730,7 @@
       <dependency>
         <groupId>com.fasterxml.jackson.core</groupId>
         <artifactId>jackson-databind</artifactId>
-        <version>${jackson.tesb.version}</version>
+        <version>${jackson-databind.tesb.version}</version>
       </dependency>
 
       <!-- Used to configure the activemq logs -->
@@ -792,43 +797,43 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-aop</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-beans</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-context</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-core</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-expression</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-jms</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-tx</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <!--
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
         <exclusions>
           <exclusion>
             <groupId>javax.mail</groupId>
@@ -868,22 +873,22 @@
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-webmvc</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-web</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-test</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
       <dependency>
         <groupId>org.springframework</groupId>
         <artifactId>spring-oxm</artifactId>
-        <version>${spring-version}</version>
+        <version>${spring.tesb.version}</version>
       </dependency>
 
       <!-- Optional Derby support-->
@@ -944,7 +949,7 @@
       <dependency>
         <groupId>com.thoughtworks.xstream</groupId>
         <artifactId>xstream</artifactId>
-        <version>${xstream-version}</version>
+        <version>${xstream.tesb.version}</version>
         <exclusions>
           <exclusion>
             <!-- xom is an optional dependency of xstream. Its also
@@ -1040,7 +1045,7 @@
       <dependency>
         <groupId>org.codehaus.jettison</groupId>
         <artifactId>jettison</artifactId>
-        <version>${jettison-version}</version>
+        <version>${jettison.tesb.version}</version>
     </dependency>
 
       <dependency>
@@ -1118,10 +1123,13 @@
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson.tesb.version}</jackson-databind.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <!-- <commons-net.tesb.version>${commons-net.tesb.version}</commons-net.tesb.version> -->
+              <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
+              <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
               <netty.tesb.version>${netty.tesb.version}</netty.tesb.version>
               <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
               <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
-
+              <spring.tesb.version>${spring.tesb.version}</spring.tesb.version>
               <spring.tesb.version-range>${spring.tesb.version-range}</spring.tesb.version-range>
             </properties>
           </configuration>
