TPRUN-4800 Make ActiveMQ accept JMS 1 and 2 as OSGi dependency.

--- a/activemq-osgi/pom.xml
+++ b/activemq-osgi/pom.xml
@@ -29,8 +29,10 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: OSGi bundle</name>
   <description>Puts together an ActiveMQ OSGi bundle</description>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-osgi.tesb.version}</revision>
     <surefire.argLine>-Xmx512M</surefire.argLine>
   </properties>
 
