--- a/activemq-pool/pom.xml
+++ b/activemq-pool/pom.xml
@@ -29,6 +29,11 @@
   <packaging>bundle</packaging>
   <name>ActiveMQ :: Pool</name>
   <description>ActiveMQ Pooled ConnectionFactory</description>
+  <version>${revision}</version>
+
+  <properties>
+    <revision>${activemq-pool.tesb.version}</revision>
+  </properties>
 
   <dependencies>
 
@@ -133,6 +138,7 @@
           <instructions>
             <Export-Package>org.apache.activemq.pool*;version=${upstream.version};-noimport:=true</Export-Package>
             <Import-Package>
+              javax.jms*;version="[1.1,3)",
               javax.transaction*;resolution:=optional,
               org.apache.activemq.jms.pool*;resolution:=optional,
               org.apache.activemq.ra*;resolution:=optional,
