--- a/pom.xml
+++ b/pom.xml
@@ -42,7 +42,7 @@
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
     <activemq-karaf.features.tesb.version>5.17.6.20240209</activemq-karaf.features.tesb.version>
-    <activemq-karaf.tesb.version>§{activemq-karaf.features.tesb.version}</activemq-karaf.tesb.version>
+    <activemq-karaf.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.tesb.version>
     <activemq-osgi.tesb.version>5.17.6.20231031</activemq-osgi.tesb.version>
     <activemq-pool.tesb.version>5.17.6.20231031</activemq-pool.tesb.version>
     <activemq-web-console.tesb.version>5.17.6.20231031</activemq-web-console.tesb.version>
