--- a/pom.xml
+++ b/pom.xml
@@ -38,7 +38,7 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.15.16.tesb1</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.15.16.tesb2</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.16.tesb1</activemq-web-console.tesb.version>
     <jackson.tesb.version>2.14.1</jackson.tesb.version>
     <jackson-databind.tesb.version>2.14.1</jackson-databind.tesb.version>
@@ -50,6 +50,7 @@
     <qpid-jms-netty.tesb.version>4.1.100.Final</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>4.1.100.Final</netty-all.tesb.version>
     <jettison.tesb.version>1.5.4</jettison.tesb.version>
+    <commons-io.tesb.version>2.15.1</commons-io.tesb.version>
     <commons-net.tesb.version>3.9.0</commons-net.tesb.version>
 
     <!-- JAR dependency versions -->
@@ -1174,6 +1175,7 @@
               <qpid-jms-netty.tesb.version>${qpid-jms-netty.tesb.version}</qpid-jms-netty.tesb.version>
               <netty-all.tesb.version>${netty-all.tesb.version}</netty-all.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <commons-io.tesb.version>${commons-io.tesb.version}</commons-io.tesb.version>
               <commons-net.tesb.version>${commons-net.tesb.version}</commons-net.tesb.version>
             </properties>
           </configuration>
