--- a/pom.xml
+++ b/pom.xml
@@ -41,7 +41,7 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.17.6.20240425</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.17.6.20240725</activemq-karaf.features.tesb.version>
     <activemq-karaf.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.tesb.version>
     <activemq-osgi.tesb.version>5.17.6.20231031</activemq-osgi.tesb.version>
     <activemq-pool.tesb.version>5.17.6.20231031</activemq-pool.tesb.version>
@@ -50,14 +50,17 @@
     <jackson.tesb.version>2.16.0</jackson.tesb.version>
     <jackson-databind.tesb.version>${jackson.tesb.version}</jackson-databind.tesb.version>
     <jettison.tesb.version>1.5.4</jettison.tesb.version>
+    <commons-codec.tesb.version>1.17.0</commons-codec.tesb.version>
+    <commons-io.tesb.version>2.16.1</commons-io.tesb.version>
+    <commons-lang.tesb.version>3.14.0</commons-lang.tesb.version>
     <!-- <commons-net.tesb.version>3.9.0</commons-net.tesb.version> -->
     <xstream.tesb.version>1.4.20</xstream.tesb.version>
     <xstream-bundle.tesb.version>1.4.20_1</xstream-bundle.tesb.version>
-    <netty.tesb.version>4.1.108.Final</netty.tesb.version>
+    <netty.tesb.version>4.1.111.Final</netty.tesb.version>
     <qpid-jms-netty.tesb.version>${netty.tesb.version}</qpid-jms-netty.tesb.version>
     <netty-all.tesb.version>${netty.tesb.version}</netty-all.tesb.version>
     <jaxb-bundle.tesb.version>2.3.2_3</jaxb-bundle.tesb.version>
-    <spring.tesb.version>5.3.34</spring.tesb.version>
+    <spring.tesb.version>5.3.37</spring.tesb.version>
     <spring.tesb.version-range>[5.2,7)</spring.tesb.version-range>
 
     <!-- JAR dependency versions -->
@@ -1140,6 +1143,9 @@
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson-databind.tesb.version>${jackson-databind.tesb.version}</jackson-databind.tesb.version>
               <jettison.tesb.version>${jettison.tesb.version}</jettison.tesb.version>
+              <commons-codec.tesb.version>${commons-codec.tesb.version}</commons-codec.tesb.version>
+              <commons-io.tesb.version>${commons-io.tesb.version}</commons-io.tesb.version>
+              <commons-lang.tesb.version>${commons-lang.tesb.version}</commons-lang.tesb.version>
               <!-- <commons-net.tesb.version>${commons-net.tesb.version}</commons-net.tesb.version> -->
               <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
               <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
